# app/Http/Controllers/ProductsController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers;
 
 use Exception;
+use App\Http\Requests\ProductCreateRequest;
 use App\Repositories\ProductRepository;
 use App\Traits\ResponseTrait;
 use Illuminate\Http\JsonResponse;
@@ -37,6 +38,39 @@ class ProductsController extends Controller
      *             type="integer",
      *         )
      *     ),
+     *     @OA\Parameter(
+     *         name="search",
+     *         in="query",
+     *         description="Search by title",
+     *         required=false,
+     *         explode=true,
+     *         @OA\Schema(
+     *             default="",
+     *             type="string",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="orderBy",
+     *         in="query",
+     *         description="Order By column name",
+     *         required=false,
+     *         explode=true,
+     *         @OA\Schema(
+     *             default="id",
+     *             type="string",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="order",
+     *         in="query",
+     *         description="Order ordering - asc or desc",
+     *         required=false,
+     *         explode=true,
+     *         @OA\Schema(
+     *             default="desc",
+     *             type="string",
+     *         )
+     *     ),
      *     security={{"bearer":{}}},
      *     @OA\Response(
      *         response=200,
@@ -51,31 +85,72 @@ class ProductsController extends Controller
     public function index(): JsonResponse
     {
         try {
-            return $this->responseSuccess($this->productRepository->getAll(request()->perPage), 'Product fetched successfully.');
+            return $this->responseSuccess($this->productRepository->getAll(request()->all()), 'Product fetched successfully.');
         } catch (Exception $e) {
             return $this->responseError([], $e->getMessage());
         }
     }
 
     /**
-     * Show the form for creating a new resource.
-     *
-     * @return \Illuminate\Http\Response
+     * @OA\POST(
+     *     path="/api/products",
+     *     tags={"Products"},
+     *     summary="Create product",
+     *     description="Create product",
+     *     operationId="store",
+     *     security={{"bearer":{}}},
+     *     @OA\RequestBody(
+     *         description="Product objects",
+     *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *            @OA\Schema(
+     *                 type="object",
+     *                 @OA\Property(
+     *                     property="title",
+     *                     description="Product title",
+     *                     type="string",
+     *                     example="Product title"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="slug",
+     *                     description="Product slug",
+     *                     type="string",
+     *                     example="product-title"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="price",
+     *                     description="Product price",
+     *                     type="integer",
+     *                     example="200"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="image",
+     *                     description="Product image",
+     *                     type="string",
+     *                     format="binary"
+     *                 ),
+     *                 required={"title", "price"}
+     *             )
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation",
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid input"
+     *     )
+     * )
      */
-    public function create()
+    public function store(ProductCreateRequest $request): JsonResponse
     {
-        //
-    }
-
-    /**
-     * Store a newly created resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @return \Illuminate\Http\Response
-     */
-    public function store(Request $request)
-    {
-        //
+        try {
+            return $this->responseSuccess($this->productRepository->create($request->all()), 'Product created successfully.');
+        } catch (Exception $e) {
+            return $this->responseError([], $e->getMessage());
+        }
     }
 
     /**
@@ -91,17 +166,6 @@ class ProductsController extends Controller
         } catch (Exception $e) {
             return $this->responseError([], $e->getMessage());
         }
-    }
-
-    /**
-     * Show the form for editing the specified resource.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
-     */
-    public function edit($id)
-    {
-        //
     }
 
     /**
